--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
 
   "env": {
     "SESSION_ID": {
-            "description": "Type the Session-ID you got from scaning QR / ඔබට ආපු කොඩය මෙතන්ට දමන්න",
+            "description": "VAJIRA-MD=rZElzS6J#EBwfQhiwTecKHaCWvsAr0lPle0eQkeeXc1E9oCOCTWs",
             "required": true,
-            "value": "put session id here"
+            "value": "VAJIRA-MD=rZElzS6J#EBwfQhiwTecKHaCWvsAr0lPle0eQkeeXc1E9oCOCTWs"
         },
     "COMMAND_TYPE": {
             "description": "Put correct spelling button or nonbutton here to change mode / මෙයට button හෝ nonbutton ලෙස නිවැරදිව නොවරදවා දමන්න",
@@ -34,7 +34,7 @@
     "OWNER_NUMBER": {
             "description": "Put Your number here / ඔබගෙ දුරකතන අංකය දමන්න",
             "required": true,
-            "value": "9471xxxxxxx"
+            "value": "94713520744"
 }
 
     },
