--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
 
   "env": {
     "SESSION_ID": {
-            "description": "VAJIRA-MD=rZElzS6J#EBwfQhiwTecKHaCWvsAr0lPle0eQkeeXc1E9oCOCTWs",
+            "description": "VAJIRA-MD=2c1FnZDR#hd0lgujySGmOKcDyUC97tRQ3E7TJcxydY9mrWlA-k1Q",
             "required": true,
-            "value": "VAJIRA-MD=rZElzS6J#EBwfQhiwTecKHaCWvsAr0lPle0eQkeeXc1E9oCOCTWs"
+            "value": "VAJIRA-MD=2c1FnZDR#hd0lgujySGmOKcDyUC97tRQ3E7TJcxydY9mrWlA-k1Q"
         },
     "COMMAND_TYPE": {
             "description": "Put correct spelling button or nonbutton here to change mode / මෙයට button හෝ nonbutton ලෙස නිවැරදිව නොවරදවා දමන්න",
@@ -34,7 +34,7 @@
     "OWNER_NUMBER": {
             "description": "Put Your number here / ඔබගෙ දුරකතන අංකය දමන්න",
             "required": true,
-            "value": "94713520744"
+            "value": "94713130673"
 }
 
     },
